--- a/mainpage/mainstyles.css
+++ b/mainpage/mainstyles.css
@@ -1,4 +1,3 @@
-
 .navbar-brand {
     color: #026E81;
 }
@@ -8,7 +7,7 @@
 }
 
 .profile {
-    	display: flex;
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -74,6 +73,9 @@
     padding-bottom: 4rem;
 }
 
+.cols {
+    display: flex;
+}
 
 
 .colimg {
@@ -97,4 +99,53 @@
     font-size: 1rem;
     text-align: center;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1300px) {
+    .profile {
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .sidepfp img {
+        align-items: center;
+        text-align: center;
+        float: none;
+        width: 100%;
+    }
+
+    .info {
+        width: 70%;
+        align-items: center;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .carouselimg {
+        width: 720px;
+        height: 360px;
+    }
+
+    .cols {
+        display:flex;
+        max-width: 200px;  
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .colimg img {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+        margin-bottom: 1em;
+        margin-top: 2em;
+        filter: drop-shadow(4px 4px 4px #0099DD);
+    }
+
+    .legimg {
+        align-items: center;
+        text-align: center;
+    }
 }
